--- a/DL_3_DRESS_PATTERN_CLASSIFICATION_USING_CNN_AND_SIMILARITY_SEARCH.ipynb
+++ b/DL_3_DRESS_PATTERN_CLASSIFICATION_USING_CNN_AND_SIMILARITY_SEARCH.ipynb
@@ -21,21 +21,10 @@
     },
     "colab": {
       "name": "DL 3 - DRESS PATTERN CLASSIFICATION USING CNN AND SIMILARITY SEARCH.ipynb",
-      "provenance": [],
-      "include_colab_link": true
+      "provenance": []
     }
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/Kuzhalmozhiveemar/DRESS-PATTERN-CLASSIFICATION-USING-CNN/blob/master/DL_3_DRESS_PATTERN_CLASSIFICATION_USING_CNN_AND_SIMILARITY_SEARCH.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "markdown",
       "metadata": {
